test/FAIL/dispcmd/to_few_arguments/03_test_disp.emu
#-------
#TEST_RETURN_CODE=FAIL           
#TEST_COMMENT="to few arguments"
#-------

disp reg

